crates/toml_edit/tests/snapshots/invalid/key/no-eol-06.stderr
TOML parse error at line 1, column 4
  |
1 | 0=0r0=0r=false
  |    ^
expected newline, `#`
